modified styles to prevent text from overflow

--- a/src/components/FileModal/FileModal.module.css
+++ b/src/components/FileModal/FileModal.module.css
@@ -28,6 +28,13 @@
 	padding: 5px;
 }
 
+.fileModal header h2 {
+	max-width: 90%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .fileModal main {
 	display: flex;
 	width: 100%;
